<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.young.metro.ui.HomeFragment"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_fragment_home_to_locationListFragment"
            app:destination="@id/locationListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_fragment_home_to_stationInformationDetailFragment"
            app:destination="@id/stationInformationDetailFragment"
            app:enterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down"/>
    </fragment>
    <fragment
        android:id="@+id/locationListFragment"
        android:name="com.young.metro.ui.LocationListFragment"
        android:label="LocationListFragment"
        tools:layout="@layout/fragment_location_list">
        <action
            android:id="@+id/action_locationListFragment_to_stationInformationDetailFragment"
            app:destination="@id/stationInformationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/stationInformationDetailFragment"
        android:name="com.young.metro.ui.StationInformationDetailFragment"
        android:label="StationInformationDetailFragment"
        tools:layout="@layout/fragment_station_information_detail">

        <argument
            android:name="stinCodes"
            app:argType="string[]" />

        <argument
            android:name="stationName"
            app:argType="string" />
        <action
            android:id="@+id/action_stationInformationDetailFragment_to_photoListFragment"
            app:destination="@id/photoDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/photoDetailFragment"
        android:name="com.young.metro.ui.PhotoDetailFragment"
        android:label="PhotoDetailFragment"
        tools:layout="fragment_photo_detail">

        <argument
            android:name="photoUrl"
            app:argType="string"/>

    </fragment>
</navigation>