...
            type="com.young.metro.adapter.LineLogoAdapter" />
        <variable
            name="position"
            type="Integer" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lo_item_station_name"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> vm.onStationClick(data)}">

        <androidx.appcompat.widget.AppCompatTextView
...
